# drf-healthy-habit-tracker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodicity.py  0003_alter_habit_periodicity.py  0004_alter_habit_periodicity.py  0005_alter_habit_periodicity.py  0006_alter_habit_periodicity.py  0007_alter_habit_periodicity.py  0008_alter_habit_periodicity.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_tg_chat_id.py
